# gpioctrl

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: gpioctrl.c
test/: gpiocfg.json
